# github-stars-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
src/github_stars_mcp/: __init__.py  config.py  exceptions.py  models.py  server.py  shared.py
src/github_stars_mcp/common/: error_handlers.py  github_helpers.py  logging_helpers.py  validators.py
src/github_stars_mcp/resources/: __init__.py  user_info.py
src/github_stars_mcp/tools/: __init__.py  analysis_bundle.py  batch_repo_details.py  repo_details.py  starred_repo_list.py  timeline_analyzer.py
src/github_stars_mcp/utils/: __init__.py  github_client.py
tests/: __init__.py  conftest.py  test_config.py  test_github_client.py  test_models.py  test_performance.py  test_server.py  test_timeline_analyzer.py  test_tools.py  test_tools_integration.py  test_tools_simple.py
